ansible/k8s/manifests/immich/immich-machine-learning.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: immich-machine-learning
  name: immich-machine-learning
  namespace: immich
spec:
  replicas: 2
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:v1.125.6
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: model-cache
              mountPath: /cache
            - name: immich-secrets
              mountPath: /secrets
      volumes:
        - name: immich-secrets
          projected:
            sources:
              - secret:
                  name: immich-secrets
        - name : model-cache
          emptyDir: {}
