ansible/k8s/manifests/immich/immich-microservices.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: immich-microservices
  name: immich-microservices
  namespace: immich
spec:
  replicas: 1
  serviceName: immich-microservices
  selector:
    matchLabels:
      app: immich-microservices
  template:
    metadata:
      labels:
        app: immich-microservices
    spec:
      containers:
        - name: immich-microservices
          image: ghcr.io/immich-app/immich-server:v1.122.2
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: immich-photos
              mountPath: /usr/src/app/upload
            - name: immich-secrets
              mountPath: /secrets
      volumes:
        - name: immich-secrets
          projected:
            sources:
              - secret:
                  name: immich-secrets
        - name: immich-photos
          persistentVolumeClaim:
            claimName: immich-photos-pvc
